# tactile

./: .appveyor.yml  .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakePresets.json  Doxyfile  README.md  TODO.md  vcpkg.json
modules/: CMakeLists.txt
modules/app/: CMakeLists.txt  application.cpp  application.hpp  application_events.cpp  application_events.hpp  assert.cpp  assert.hpp  crash.cpp  crash.hpp  logging.cpp  main.cpp  tactile_def.hpp  tactile_stdlib.hpp  throw.hpp
modules/core/: CMakeLists.txt
modules/editor/: CMakeLists.txt
modules/foundation/: CMakeLists.txt
modules/godot-scene-format/: CMakeLists.txt
modules/main/: CMakeLists.txt
modules/opengl/: CMakeLists.txt
modules/opengl-renderer/: CMakeLists.txt
modules/proto/: CMakeLists.txt  history.proto  session.proto  settings.proto
modules/tactile/: CMakeLists.txt  README.md  application.cpp  application.hpp  application_events.cpp  application_events.hpp  assert.cpp  build.hpp  doxy.hpp  logging.cpp  logging.hpp  main.cpp  profile.hpp  tactile_def.hpp  throw.hpp
modules/tactile-base/: property_value.hpp  tactile_def.hpp  tactile_error.hpp  tactile_stdlib.hpp
modules/tactile-io/: CMakeLists.txt  README.md  common_parsing.cpp  common_parsing.hpp  common_saving.cpp  common_saving.hpp  emit.cpp  emitter.hpp  io_utils.cpp  io_utils.hpp  ir.cpp  ir_animation_frame.cpp  ir_common.cpp  ir_component.cpp  ir_definitions.hpp  ir_layer.cpp  ir_map.cpp  ir_object.cpp  ir_property.cpp  ir_tile.cpp  ir_tileset.cpp  parse_error.cpp  parse_error.hpp  parse_ir.cpp  parser.hpp  string_utils.hpp
modules/tactile-proto/: CMakeLists.txt  generate.bat  history.proto  session.proto  settings.proto
modules/tactile-yml-format/: CMakeLists.txt
modules/testutil/: CMakeLists.txt
modules/tiled-json-format/: CMakeLists.txt
modules/tiled-xml-format/: CMakeLists.txt
modules/tmj-format/: CMakeLists.txt
modules/vulkan-renderer/: CMakeLists.txt
proto/: CMakeLists.txt  generate.bat  history.proto  session.proto  settings.proto
source/app/: CMakeLists.txt  README.md  app.cpp  app.hpp  application.cpp  application.hpp  application_events.cpp  application_events.hpp  boost.hpp  crash.hpp  logging.cpp  logging.hpp  loop.cpp  loop.hpp  main.cpp  profile.hpp  tactile.hpp  tactile_def.hpp  throw.hpp
source/base/: CMakeLists.txt
source/core/: CMakeLists.txt
source/exe/: CMakeLists.txt
source/json_util/: CMakeLists.txt
source/lib/: CMakeLists.txt
source/main/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  app.cpp  app.hpp  app_connections.cpp  application.cpp  application.hpp  application_events.cpp  build.hpp  common.hpp  editor_pane.cpp  editor_pane.h  fwd.hpp  gl_attributes.cpp  imgui_wrapper.cpp  imgui_wrapper.hpp  init_open_gl_attributes.cpp  init_open_gl_attributes.hpp  main.cpp  settings_utils.cpp  settings_utils.h  settings_utils.hpp  shortcuts.cpp  shortcuts.hpp  tactile.qrc  tactile2.qrc  tactile_app.cpp  tactile_app.hpp  tactile_application.cpp  tactile_application.h  tactile_application.hpp  tactile_fwd.hpp  tactile_window.cpp  tactile_window.h  version.hpp  window.ui
src/aliases/: col.hpp  czstring.hpp  hash_map.hpp  ints.hpp  json.hpp  layer_id.hpp  layer_map.hpp  layer_stack_resource.hpp  map_id.hpp  maybe.hpp  object_id.hpp  object_ref.hpp  ref.hpp  row.hpp  shared.hpp  tile_cache.hpp  tile_id.hpp  tile_matrix.hpp  tileset_id.hpp  unique.hpp
src/app/: app.cpp  app.hpp  app_connections.cpp  app_connections.hpp  set_style_sheet.cpp  set_style_sheet.hpp  setup_app.cpp  setup_app.hpp
src/cfg/: gl_attributes.hpp
src/command/: abstract_command.cpp  abstract_command.hpp  add_col.cpp  add_col.hpp  add_layer.cpp  add_layer.hpp  add_property.cpp  add_property.hpp  add_row.cpp  add_row.hpp  add_tileset.cpp  add_tileset.hpp  bucket_fill.cpp  bucket_fill.hpp  change_property_type.cpp  change_property_type.hpp  command_id.hpp  command_stack.cpp  command_stack.hpp  erase_sequence.cpp  erase_sequence.hpp  map_command.cpp  map_command.hpp  remove_col.cpp  remove_col.hpp  remove_layer.cpp  remove_layer.hpp  remove_property.cpp  remove_property.hpp  remove_row.cpp  remove_row.hpp  remove_row_col.cpp  remove_row_col.hpp  remove_tileset.cpp  remove_tileset.hpp  rename_property.cpp  rename_property.hpp  repeated_command.hpp  repeated_map_command.cpp  repeated_map_command.hpp  (+10 more)
src/commands/: command_id.hpp  command_stack.hpp  repeated_command.cpp  repeated_command.hpp
src/common/: context_id.hpp  cstr.hpp  expected.hpp  layer_id.hpp  maybe.hpp  not_null.hpp  object_id.hpp  object_ref.hpp  shared.hpp  tile_cache.hpp  tile_matrix.hpp  unique.hpp
src/core/: core_fwd.hpp  core_model.cpp  core_model.hpp  document.hpp  document_delegate.cpp  document_delegate.hpp  flood_fill.cpp  flood_fill.h  flood_fill.hpp  iterate_tileset_selection.hpp  layer_id.hpp  layer_type.hpp  map.hpp  map_document.cpp  map_document.hpp  map_model.cpp  map_model.hpp  map_position.h  map_position.hpp  model.cpp  model.hpp  mouse_info.hpp  mouse_tool_type.hpp  position.hpp  property_delegate.cpp  property_value.hpp  region.hpp  tactile_core.cpp  tactile_core.h  tactile_core.hpp  tactile_editor.cpp  tactile_editor.h  tactile_error.hpp  tactile_fwd.hpp  tile.h  tile_id.hpp  tile_layer.cpp  tile_layer.h  tile_map.cpp  tile_map.h  (+2 more)
src/editor/: model.hpp
src/events/: change_command_capacity_event.hpp  command_events.hpp  flood_event.hpp  layer_events.hpp  map_events.hpp  property_events.hpp  redo_event.hpp  save_as_event.hpp  save_as_request_event.hpp  save_event.hpp  stamp_sequence_event.hpp  tileset_events.hpp  tool_events.hpp  undo_event.hpp  viewport_events.hpp
src/export/: export_options.cpp  export_options.hpp  save_map_document.cpp  save_map_document.hpp
src/filesystem/: get_persistent_file_path.cpp  (+1 more)
test/: CMakeLists.txt  flood_fill_test.cpp  map_position_test.cpp  test_main.cpp  tile_layer_test.cpp  tile_map_test.cpp  tile_sheet_manager_test.cpp  tile_sheet_test.cpp  tile_size_test.cpp  tilemap_test.cpp  tileset_manager_test.cpp  tileset_test.cpp  widget_size_policy_test.cpp
(+9368 files in other folders)
